main deleted & data updated & routes applied

--- a/pelis-similares.ipynb
+++ b/pelis-similares.ipynb
@@ -14,6 +14,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:11.146191Z",
+     "start_time": "2025-10-22T10:26:11.120797Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -24,12 +28,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
     "\n",
     "r_cols = ['user_id', 'movie_id', 'rating']\n",
-    "ratings = pd.read_csv('.\\\\datos\\\\u.data', sep='\\t', names=r_cols, usecols=range(3), encoding=\"ISO-8859-1\")\n",
+    "ratings = pd.read_csv('./data/u.data', sep='\\t', names=r_cols, usecols=range(3), encoding=\"ISO-8859-1\")\n",
     "\n",
     "m_cols = ['movie_id', 'title']\n",
-    "movies = pd.read_csv('.\\\\datos\\\\u.item', sep='|', names=m_cols, usecols=range(2), encoding=\"ISO-8859-1\")\n",
+    "movies = pd.read_csv('./data/u.item', sep='|', names=m_cols, usecols=range(2), encoding=\"ISO-8859-1\")\n",
     "\n",
     "ratings = pd.merge(movies, ratings)\n"
    ]
@@ -38,6 +44,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:11.173773Z",
+     "start_time": "2025-10-22T10:26:11.169707Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -135,6 +145,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:11.340841Z",
+     "start_time": "2025-10-22T10:26:11.293574Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -429,6 +443,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:11.835028Z",
+     "start_time": "2025-10-22T10:26:11.829562Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -473,6 +491,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:12.015088Z",
+     "start_time": "2025-10-22T10:26:11.883194Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -481,22 +503,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jorge\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\lib\\_function_base_impl.py:3065: RuntimeWarning: invalid value encountered in divide\n",
-      "  c /= stddev[:, None]\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\lib\\_function_base_impl.py:3066: RuntimeWarning: invalid value encountered in divide\n",
-      "  c /= stddev[None, :]\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\lib\\_function_base_impl.py:3057: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  c = cov(x, y, rowvar, dtype=dtype)\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\lib\\_function_base_impl.py:2914: RuntimeWarning: divide by zero encountered in divide\n",
-      "  c *= np.true_divide(1, fact)\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\lib\\_function_base_impl.py:2914: RuntimeWarning: invalid value encountered in multiply\n",
-      "  c *= np.true_divide(1, fact)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -591,8 +597,10 @@
     }
    ],
    "source": [
-    "similarMoviesToStarWars = movieRatings.corrwith(starWarsRatings)\n",
-    "similarMoviesToStarWars = similarMoviesToStarWars.dropna()\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
+    "    similarMoviesToStarWars = movieRatings.corrwith(starWarsRatings)\n",
+    "    similarMoviesToStarWars = similarMoviesToStarWars.dropna()\n",
     "\n",
     "df = pd.DataFrame(similarMoviesToStarWars)\n",
     "df.head(10)"
@@ -602,6 +610,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:12.997025Z",
+     "start_time": "2025-10-22T10:26:12.990322Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -682,6 +694,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:13.230227Z",
+     "start_time": "2025-10-22T10:26:13.200641Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -829,8 +845,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:13.323479Z",
+     "start_time": "2025-10-22T10:26:13.314248Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -977,7 +997,7 @@
        "Star Trek: First Contact (1996)      365"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,8 +1024,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:13.585936Z",
+     "start_time": "2025-10-22T10:26:13.579185Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1084,7 +1108,7 @@
        "Abyss, The (1989)                151    0.203709"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,8 +1130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:26:13.706075Z",
+     "start_time": "2025-10-22T10:26:13.700417Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1276,7 +1304,7 @@
        "Swingers (1996)                                        157    0.289310"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
