--- a/recomendaciones-pelis.ipynb
+++ b/recomendaciones-pelis.ipynb
@@ -14,6 +14,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:09.041191Z",
+     "start_time": "2025-10-22T10:14:09.008943Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -85,17 +89,68 @@
        "      <td>66</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>1678</td>\n",
+       "      <td>Mat' i syn (1997)</td>\n",
+       "      <td>863</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>1679</td>\n",
+       "      <td>B. Monkey (1998)</td>\n",
+       "      <td>863</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100000</th>\n",
+       "      <td>1680</td>\n",
+       "      <td>Sliding Doors (1998)</td>\n",
+       "      <td>863</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100001</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>You So Crazy (1994)</td>\n",
+       "      <td>896</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100002</th>\n",
+       "      <td>1682</td>\n",
+       "      <td>Scream of Stone (Schrei aus Stein) (1991)</td>\n",
+       "      <td>916</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100003 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id             title  user_id  rating\n",
-       "0         1  Toy Story (1995)      308       4\n",
-       "1         1  Toy Story (1995)      287       5\n",
-       "2         1  Toy Story (1995)      148       4\n",
-       "3         1  Toy Story (1995)      280       4\n",
-       "4         1  Toy Story (1995)       66       3"
+       "        movie_id                                      title  user_id  rating\n",
+       "0              1                           Toy Story (1995)      308       4\n",
+       "1              1                           Toy Story (1995)      287       5\n",
+       "2              1                           Toy Story (1995)      148       4\n",
+       "3              1                           Toy Story (1995)      280       4\n",
+       "4              1                           Toy Story (1995)       66       3\n",
+       "...          ...                                        ...      ...     ...\n",
+       "99998       1678                          Mat' i syn (1997)      863       1\n",
+       "99999       1679                           B. Monkey (1998)      863       3\n",
+       "100000      1680                       Sliding Doors (1998)      863       2\n",
+       "100001      1681                        You So Crazy (1994)      896       3\n",
+       "100002      1682  Scream of Stone (Schrei aus Stein) (1991)      916       3\n",
+       "\n",
+       "[100003 rows x 4 columns]"
       ]
      },
      "execution_count": 1,
@@ -107,20 +162,24 @@
     "import pandas as pd\n",
     "\n",
     "r_cols = ['user_id', 'movie_id', 'rating']\n",
-    "ratings = pd.read_csv('.\\\\datos\\\\u.data', sep='\\t', names=r_cols, usecols=range(3), encoding=\"ISO-8859-1\")\n",
+    "ratings = pd.read_csv('./data/u.data', sep='\\t', names=r_cols, usecols=range(3), encoding=\"ISO-8859-1\")\n",
     "\n",
     "m_cols = ['movie_id', 'title']\n",
-    "movies = pd.read_csv('.\\\\datos\\\\u.item', sep='|', names=m_cols, usecols=range(2), encoding=\"ISO-8859-1\")\n",
+    "movies = pd.read_csv('./data/u.item', sep='|', names=m_cols, usecols=range(2), encoding=\"ISO-8859-1\")\n",
     "\n",
     "ratings = pd.merge(movies, ratings)\n",
     "\n",
-    "ratings.head()"
+    "ratings.head(1000000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:09.203949Z",
+     "start_time": "2025-10-22T10:14:09.155892Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -415,6 +474,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:10.709174Z",
+     "start_time": "2025-10-22T10:14:09.783955Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -749,6 +812,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:12.091359Z",
+     "start_time": "2025-10-22T10:14:11.240313Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1083,6 +1150,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:12.806735Z",
+     "start_time": "2025-10-22T10:14:12.800884Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1135,6 +1206,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:13.301984Z",
+     "start_time": "2025-10-22T10:14:13.291599Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1147,7 +1222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Series([], dtype: object)\n",
+      "Series([], dtype: float64)\n",
       "Añadiendo pelis similares a Empire Strikes Back, The (1980)...\n",
       "Añadiendo pelis similares a Gone with the Wind (1939)...\n",
       "Añadiendo pelis similares a Star Wars (1977)...\n",
@@ -1164,31 +1239,17 @@
       "Sting, The (1973)                                     1.837692\n",
       "dtype: float64\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jorge\\AppData\\Local\\Temp\\ipykernel_20136\\2439142656.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  sims = sims.map(lambda x: x * myRatings[i])\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Temp\\ipykernel_20136\\2439142656.py:10: FutureWarning: The behavior of array concatenation with empty entries is deprecated. In a future version, this will no longer exclude empty items when determining the result dtype. To retain the old behavior, exclude the empty entries before the concat operation.\n",
-      "  simCandidates = pd.concat([simCandidates, sims])\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Temp\\ipykernel_20136\\2439142656.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  sims = sims.map(lambda x: x * myRatings[i])\n",
-      "C:\\Users\\jorge\\AppData\\Local\\Temp\\ipykernel_20136\\2439142656.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  sims = sims.map(lambda x: x * myRatings[i])\n"
-     ]
     }
    ],
    "source": [
-    "simCandidates = pd.Series()\n",
+    "simCandidates = pd.Series(dtype='float64')\n",
     "print(simCandidates)\n",
     "for i in range(0, len(myRatings.index)):\n",
     "    print (\"Añadiendo pelis similares a \" + myRatings.index[i] + \"...\")\n",
     "    # Recuperar las pelis similares a las calificadas\n",
     "    sims = corrMatrix[myRatings.index[i]].dropna()\n",
-    "    # Escalar la similaridad multiplicando la correlación por la calificación de la persona\n",
-    "    sims = sims.map(lambda x: x * myRatings[i])\n",
+    "    # Escalar la similitud multiplicando la correlación por la calificación de la persona\n",
+    "    sims = sims.map(lambda x: x * myRatings.iloc[i])\n",
     "    # Añadir el puntaje a la lista de candidatos similares\n",
     "    simCandidates = pd.concat([simCandidates, sims])\n",
     "    \n",
@@ -1212,6 +1273,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:14.194328Z",
+     "start_time": "2025-10-22T10:14:14.189803Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1228,6 +1293,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:14.691144Z",
+     "start_time": "2025-10-22T10:14:14.683489Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1276,6 +1345,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-22T10:14:14.781077Z",
+     "start_time": "2025-10-22T10:14:14.776613Z"
+    },
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -1363,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
